# dockerizando-flask

./: .env  .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  rotas.py  usuario.py
aplicacao/: __init__.py  app.py  config.py  db.py
usuario/: apis.py  migrations.py  modelos.py  orm.py  repo.py
usuario/pontos_de_entrada/: usuario.py
