[tool.poetry]
name = "dockerizando-flask"
version = "0.1.0"
description = ""
authors = ["lucianogomes02 <luciano@pontotel.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.1"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
