[tool.poetry]
name = "dockerizando-flask"
version = "0.1.0"
description = ""
authors = ["lucianogomes02 <luciano@pontotel.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.0.1"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.39"
flask-pydantic-spec = "^0.3.1"
Werkzeug = "2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
